# ink-lending

./: .eslintrc.js  Cargo.toml  README.md  package.json  rust-toolchain.toml
.github/: git-restore-mtime.py
.github/workflows/: ci.yml
contracts/asset_pool/: Cargo.toml  lib.rs  tree.txt
contracts/calc/: Cargo.toml  lib.rs
contracts/collateral_token/: Cargo.toml  lib.rs
contracts/factory/: Cargo.toml  lib.rs
contracts/manager/: Cargo.toml  lib.rs
contracts/math/: Cargo.toml  lib.rs
contracts/rate_strategies/: Cargo.toml  lib.rs
contracts/registry/: Cargo.toml  lib.rs
contracts/risk_strategies/: Cargo.toml  lib.rs
contracts/service/: Cargo.toml  lib.rs
contracts/shares_token/: Cargo.toml  expanded  lib.rs
contracts/ui_data_provider/: Cargo.toml  lib.rs
contracts/variable_debt_token/: Cargo.toml  lib.rs
frontend/: package.json
frontend/src/__generated__/artifacts/: asset_pool.contract  asset_pool.json  dummy_oracle.contract  dummy_oracle.json  dummy_pool.contract  dummy_pool.json  dummy_risk_strategy.contract  dummy_risk_strategy.json  factory.contract  factory.json  manager.contract  manager.json  psp22_token.contract  psp22_token.json  rate_strategies.contract  rate_strategies.json  registry.contract  registry.json  risk_strategies.contract  risk_strategies.json  service.contract  service.json  shares_token.contract  shares_token.json  ui_data_provider.contract  ui_data_provider.json
frontend/src/__generated__/types/build-extrinsic/: asset_pool.ts  dummy_oracle.ts  dummy_pool.ts  dummy_risk_strategy.ts  factory.ts  manager.ts  psp22_token.ts  rate_strategies.ts  registry.ts  risk_strategies.ts  service.ts  shares_token.ts  ui_data_provider.ts
frontend/src/__generated__/types/constructors/: asset_pool.ts  dummy_oracle.ts  dummy_pool.ts  dummy_risk_strategy.ts  factory.ts  manager.ts  psp22_token.ts  rate_strategies.ts  registry.ts  risk_strategies.ts  service.ts  shares_token.ts  ui_data_provider.ts
frontend/src/__generated__/types/contracts/: asset_pool.ts  dummy_oracle.ts  dummy_pool.ts  dummy_risk_strategy.ts  factory.ts  manager.ts  (+7 more)
frontend/src/api/: index.ts
frontend/src/env/: index.ts
frontend/src/hooks/: usePolkadotApi.ts  useSigner.ts  useUIDataProvider.ts
frontend/src/pages/: index.tsx
logics/: Cargo.toml  lib.rs
logics/asset_pool/: mod.rs
logics/factory/: mod.rs
logics/manager/: mod.rs
logics/math/: mod.rs
logics/rate_strategy/: mod.rs
logics/registry/: mod.rs
logics/service/: mod.rs
logics/src/: lib.rs
logics/src/asset_pool/: mod.rs
logics/src/factory/: mod.rs
logics/src/pool/: mod.rs
logics/src/registry/: mod.rs
logics/src/service/: mod.rs
logics/src/token/: mod.rs
logics/src/tokens/: collateral_token.rs  mod.rs  variable_debt_token.rs
logics/src/traits/: address_provider.rs  asset_pool.rs  factory.rs  mod.rs  pool.rs  rate_strategy.rs  registry.rs  risk_strategy.rs  service.rs  shares_token.rs  validator.rs
logics/src/traits/tokens/: collateral_token.rs  mod.rs  psp22.rs  variable_debt_token.rs
logics/traits/: asset_pool.rs  factory.rs  manager.rs  mod.rs  price_oracle.rs  rate_strategy.rs  registry.rs  risk_strategy.rs  service.rs  shares.rs  types.rs  ui_data_providers.rs
logics/ui_data_providers/: mod.rs  pool_data_provider.rs
mocks/contracts/dummy_oracle/: Cargo.toml  lib.rs
mocks/contracts/dummy_pool/: Cargo.toml  lib.rs
mocks/contracts/dummy_risk_strategy/: Cargo.toml  lib.rs
tests/: AssetPool.spec.ts  Factory.spec.ts  Lending.spec.ts  Manager.spec.ts  Registry.spec.ts  Service.spec.ts  SharesToken.spec.ts  UIDataProvider.spec.ts  globalSetup.ts  testContractsHelpers.ts  testHelpers.ts  utilityTypes.ts
(+89 files in other folders)
