[package]
name = "factory"
version = "0.1.0"
authors = ["HorizonX"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { version = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }
logics = { path = "../../logics", default-features = false }
asset_pool = { path = "../asset_pool", default-features = false, features  = ["ink-as-dependency"] }
shares_token = { path = "../shares_token", default-features = false, features  = ["ink-as-dependency"] }

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "logics/std",
    "asset_pool/std",
    "shares_token/std"
]
