[package]
name = "shares_token"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22", "ownable"] }
logics = { version = "0.1.0", path = "../../logics" }

[lib]
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "logics/std"]
ink-as-dependency = []
